--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ google.maps.event.addDomListener(window, 'load', initialize);
   <table id="cities">
   <tr>
   <td><a href="index.html">BANGALORE</a></td>
-  <td><a href="index.html">MUMBAI</a></td>
+  <td><a href="index.html"><span style="color:#4FAEFF;">MUMBAI</span</a></td>
   <td><a href="index.html">PUNE</a></td>
   <td><a href="index.html">KOLKATA</a></td>
   <td><a href="bhubaneshwar.html">BHUBANESHWAR</a></td>
