--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE HTML>
-
 <html lang="en">
 
 <head>
@@ -183,6 +182,5 @@ google.maps.event.addDomListener(window, 'load', initialize);
 </div>
 <div id="googleMap" style="width:100%;height:450px;"></div>
 </body>
-
-
 </html>
+<!--this is a comment to check fork in html-->
