span in contacts changed
changed

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ google.maps.event.addDomListener(window, 'load', initialize);
   <img src="contact.png" alt="contact" align="center">
   </td>
  <td><br><br>
-  <span class="name">NAREN DHYANI<span>
+  <span class="name">NAREN DHYANI</span>
   <span class="det">naren@moodi.org<br/>
   +91-XXXXXXXXXX
   </span></td>
