--- a/index.html
+++ b/index.html
@@ -183,4 +183,4 @@ google.maps.event.addDomListener(window, 'load', initialize);
 <div id="googleMap" style="width:100%;height:450px;"></div>
 </body>
 </html>
-<!--this is a comment to check fork in html-->
+<!--this is a comment to check fork in git-->
