--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ google.maps.event.addDomListener(window, 'load', initialize);
        </div>
   </div>
 </div>
-<div id="spon">
+<div id="spon" align="center" >
   <div class="ab">
    SPONSOR
   </div>
